--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header{
     margin-bottom: 25px;
 }
 
+
 legend{
     font-family:Arial, Helvetica, sans-serif ;
     padding: 4px;
@@ -28,13 +29,14 @@ legend{
     background-image: linear-gradient(to right, #0e0042, #350101);
     color: rgba(255, 255, 255);
 }
+
 fieldset{
     position: absolute;
     background-color: rgba(0, 0, 0, 0.5);
     border: 2px solid rgba(255, 0, 0, 0.178);
     border-radius: 3px;
     color: rgb(255, 255, 255);
-    top: 54%;
+    top: 51%;
     left: 50%;
     width: auto;
     height: auto;
@@ -85,4 +87,9 @@ fieldset{
     bottom: 0;
     font-size: 10px;
     color: white;
+}
+#data-hora{
+    color: rgb(255, 0, 0);
+    font-size: 10px;
+    margin-bottom: 0px;
 }
